# trading_5260_haskell

./: CHANGELOG.md  trading.cabal
app/: Main.hs
app-scoring/: Main.hs
app-targets/: Main.hs
data/: Example-Initial-Countries.csv  Example-Sample-Resources.csv  countries.txt  nordic_countries.csv  resources.csv  resources.sexpr  resources_min.sexpr  resources_part2.csv  scoring1.txt  scoring2.txt  sharing_countries.csv  updates.txt
data/auto_transforms/: fossil_energy.tmpl  housing_waste_recycling.tmpl  renewable_energy.tmpl
data/countries/: propfile
data/countries/Denmark/auto_transforms/: renewable_energy.tmpl
data/countries/Denmark/transforms/: alloys.tmpl
data/countries/Endurvinna/: scoring.txt  updates.txt
data/countries/Endurvinna/auto_transforms/: building_waste_recycling.tmpl  electronics_recycling.tmpl  farm_waste_recycling.tmpl  food_recycling.tmpl  housing_waste_recycling.tmpl  new_landfill.tmpl  population_waste_recycling.tmpl  renewable_energy.tmpl
data/countries/Endurvinna/transforms/: farms.tmpl
data/countries/Finland/: config.txt  updates.txt
data/countries/Iceland/: updates.txt
data/countries/Markland/: scoring.txt  updates.txt
data/countries/Norway/: scoring.txt
data/countries/Rafverkia/: scoring.txt
data/countries/Smørrebrød/: updates.txt
data/countries/Sweden/: scoring.txt
data/transforms/: alloys.tmpl  electronics.tmpl  food_recycling.tmpl  fossil_decomission.tmpl  housing.tmpl  waste_recycling.tmpl
src/: Controller.hs  Lexer.hs  Loader.hs  Parser.y  Planner.hs  Queue.hs  Resources.hs  SkewHeap.hs
(+23 files in other folders)
