cabal-version:      2.4
name:               trading
version:            0.1.0.0
synopsis:           A development and trading A.I. agent

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             Mark Wutka
maintainer:         mark.wutka@vanderbilt.edu

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  Resources
                    , Lexer
                    , Parser

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0
                    , array
    build-tools:      happy
    hs-source-dirs:   src
    default-language: Haskell2010

executable trading
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.3.0,
        text,
        s-cargot,
        trading

    hs-source-dirs:   app
    default-language: Haskell2010
